[gd_scene load_steps=2 format=3 uid="uid://b1sog8efg7lqq"]

[ext_resource type="Script" path="res://addons/cop_variable_creator/cop_variable_creator.gd" id="1_gny3c"]

[node name="Variable Creator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_gny3c")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Label_Name" type="Label" parent="MainContainer/NameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Name         "

[node name="Name_Txt" type="LineEdit" parent="MainContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20

[node name="PathContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Label_Path" type="Label" parent="MainContainer/PathContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Path            "

[node name="Path_Txt" type="LineEdit" parent="MainContainer/PathContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30

[node name="Button" type="Button" parent="MainContainer/PathContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "   Update Path   "

[node name="CategoryContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Label_Category" type="Label" parent="MainContainer/CategoryContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Category"

[node name="Category_Options" type="OptionButton" parent="MainContainer/CategoryContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "Fixed Vars"
popup/item_0/id = 0
popup/item_1/text = "Vars"
popup/item_1/id = 1

[node name="ActionContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Label_Actions" type="Label" parent="MainContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Actions"

[node name="Action_Options" type="OptionButton" parent="MainContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateButton" type="Button" parent="MainContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Create _Var Type_"

[connection signal="pressed" from="MainContainer/CreateButton" to="." method="_on_create_button_pressed"]
